main.less
// out: main.css, sourcemap: false, compress: true

:root {
	/* Set global CSS custom properties */

	/* Spacing, base unit, t-shirt sizing (s,m,l,xl) */
	--spacing-unit: 8px;
	--xs: 4px;
	--s: 8px;
	--m: 16px;
	--l: 32px;
	--xl: 80px;

	/* Colors */
	--brand-color: hsla(44, 100%, 54%, 1);
	--brand-color--l: hsla(44, 100%, 54%, 0.24);
	--heading-color: hsla(44, 20%, 10%, 1.0);
	--text-color: hsla(44, 0%, 10%, 0.82);
	--meta-color: hsla(44, 0%, 26%, 0.66);
	--red-color: hsla(359, 84%, 44%, 1.0);
	--light-gray-color: hsla(44, 0%, 26%, 0.08);

	/* font sizes */
	--text: 1rem;
	--text-s: 0.88rem;
	--text-l: 1.1rem;

	/* animation */
	--fast: 0.2s;
	--slow: 0.8s;
}

/*----------------------------
	# Defaults and resets
----------------------------*/

body {
	font-family: 'libre_franklin';
	font-size: 16px;
	-ms-text-size-adjust:100%;
	-webkit-text-size-adjust:100%;
	-moz-osx-font-smoothing:grayscale;
	-webkit-font-smoothing:antialiased;
	font-feature-settings: "kern" 1;
	font-kerning: normal;
	font-feature-settings: "onum" 1, "pnum" 1, "kern" 1, "ss01" 1;
	line-height: 1.5;
	background-color: #f9f8f3;
	padding: 0;
	margin: auto;
	display: flex;
	flex-direction: column;
	align-items: stretch;
	justify-content: space-between;
	height: 100vh;
	& main {
		flex: 2 0 auto;
	}
	@media(max-width: 420px) {
		font-size: 15px;
	}
	& > * {
		box-sizing: border-box;
	}
}

figure, blockquote {
	margin: 0;
	padding: 0;
}

/*----------------------------
	# Typography
----------------------------*/

@font-face {
    font-family: 'prospectus';
    src: url('./assets/fonts/prospectus-black.woff2') format('woff2'),
         url('./assets/fonts/prospectus-black.woff') format('woff');
    font-weight: bold;
    font-style: normal;
}
@font-face {
    font-family: 'prospectus';
    src: url('./assets/fonts/prospectus-black-italic.woff2') format('woff2'),
         url('./assets/fonts/prospectus-black-italic.woff') format('woff');
    font-weight: bold;
    font-style: italic;
}

@font-face {
    font-family: 'libre_franklin';
    src: url('./assets/fonts/librefranklin-regular.woff2') format('woff2'),
         url('./assets/fonts/librefranklin-regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'libre_franklin';
    src: url('./assets/fonts/librefranklin-italic.woff2') format('woff2'),
         url('./assets/fonts/librefranklin-italic.woff') format('woff');
    font-weight: normal;
    font-style: italic;
}
@font-face {
    font-family: 'libre_franklin';
    src: url('./assets/fonts/librefranklin-semibold.woff2') format('woff2'),
         url('./assets/fonts/librefranklin-semibold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
}
@font-face {
    font-family: 'libre_franklin';
    src: url('./assets/fonts/librefranklin-semibold-italic.woff2') format('woff2'),
         url('./assets/fonts/librefranklin-semibold-italic.woff') format('woff');
    font-weight: bold;
    font-style: italic;
}

h1, h2, h3, h4, h5 {
	font-family: 'prospectus';
	line-height: 1.1;
	max-width: 64ch;
	margin-bottom: 0.6rem;
	color: var(--heading-color);
}
h1, .h1 {
	font-size: 3rem;
	margin-top: 4rem;
	line-height: 0.9;
}
h2, .h2 {
	font-size: 2.2rem;
	margin-top: 3rem;
}
h3 {
	font-family: 'libre_franklin';
	font-size: 1.5rem;
	margin-top: 2rem;
}
h4 {
	font-family: 'libre_franklin';
	font-size: 1.2rem;
	margin-top: 2rem;
}
p {
	font-size: 1rem;
	line-height: 1.8;
	color: var(--text-color);
	max-width: 64ch;
	&.lede {
		font-size: var(--text-l);
		color: var(--heading-color);
		margin-top: var(--m);
		margin-bottom: var(--l);
		@media(max-width: 848px) {
			margin-top: var(--l);
		}
	}
}
em {
	font-style: italic;
}
strong {
	font-weight: bold;
}
cite {
	font-style: italic;
}
::selection {
	background-color: var(--brand-color--l);
}

a {
	text-decoration: underline;
	text-decoration-color: var(--brand-color);
	text-decoration-skip: ink;
	text-decoration-thickness: 2px;
	color: var(--heading-color);
	transition: var(--fast);
	&:hover {
		text-decoration-thickness: 3px;
		transition: var(--fast);
		background-color: ;
		&::after {
			/* colors the arrow on .link-arrow::after type of links on hover */
			color: #ffbe12;
			transition: var(--fast);
			transform: translateX(1px);
		}
		&::before {
			/* colors the arrow on .link-arrow::after type of links on hover */
			color: #ffbe12;
			transition: var(--fast);
			transform: translateX(-1px);
		}
	}

	& img {
		/* Image link like movie screenshot posts on the journal */
		box-shadow: 0px 0px 0px var(--brand-color);
		transition: var(--slow);
	}
	&:hover {
		& img {
			box-shadow: 0px 4px 0px var(--brand-color);
		}
	}
}

.post-meta, time {  /* Meta information on blog posts like dates and tags */
	font-size: 0.88rem;
	line-height: 1.1;
	margin:0.8em 0;
	color: var(--meta-color);
	& a {
		color: var(--meta-color);
		text-decoration-color: var(--meta-color);
		text-decoration-thickness: 1px;
		&:hover {
			color: var(--text-color);
			text-decoration-color: var(--brand-color);
		}
	}
}

.pullquote {
	padding: var(--l);
	margin-top: var(--l);
	margin-bottom: var(--l);
	border-left: 3px solid var(--brand-color);
	transform: translateX(-16px);
	& blockquote {
		margin-bottom: var(--s);
		font-size: var(--text-l);
	}
	& figcaption {
		font-size: var(--text-s);
		color: var(--text-color);
	}
}

/*----------------------------
	# Lists
----------------------------*/
ul, ol {
	padding-left: 32px;
	& ul,
	& ol {
		padding-left: 24px;
		margin-top: 0.4rem;
		margin-bottom: 1rem;
	}
	& li {
		margin-bottom: 0.8rem;
	}
}

/*----------------------------
	# Grids & blocks
----------------------------*/
nav, main {
	width: 100%;
	max-width: 1280px;
	margin: auto;
	padding-left: 32px;
	padding-right: 32px;
}
nav, main, footer {
	@media(max-width: 840px) {
		padding-left: 24px;
		padding-right: 24px;
	}
}
main.home,
main.about { /* homepage layout */
	& article {
		display: grid;
		grid-template-columns: minmax(300px, 300px) minmax(476px, 1fr);
		grid-template-rows: auto;
		grid-template-areas:
		"col-1 col-2";
		margin-top: var(--xl);
		@media(max-width: 840px) {
			display: block;
		}
		& header {
			grid-area: col-1;
			& :first-child {
				margin-top: 1rem;
				@media(max-width: 840px) {
					margin-top: initial;
				}
			}
		}
		& section {
			grid-area: col-2;
		}
	}
}
main.journal {
}
article {
	margin: auto;
	&.post,
	&.post-wide,
	&.post-portrait {
		margin-top: var(--l);
		padding-bottom: var(--xl);
		margin-bottom: var(--xl);
		border-bottom: 1px solid var(--light-gray-color);
		& .cover-img img,
		& .cover-img,
		& figure img {
			width: 100%;
			height: auto;
			max-width: 1280px;
			background-color: var(--light-gray-color);
			line-height: 0;
		}
		& .cover-img {
			grid-area: cover;
		}
		& .post-body {
			grid-area: body;
		}
	}
	&:last-child {
		border-bottom: none;
	}
	&.post { /* Full size journal post with a big cover image, title, meta, and body content */
		display: grid;
		grid-template-columns: minmax(300px, 1fr) minmax(476px, 1fr);
		grid-template-rows: auto;
		grid-column-gap: var(--m);
		grid-template-areas:
		"cover 	cover"
		"header body"
		".  		body";
		@media(max-width: 840px) {
			display: block;
		}
		& .cover-img {
			grid-area: cover;
			margin-bottom: var(--m);
			object-fit: contain;
			max-height: 520px;
		}
		& header {
			grid-area: header;
			position: sticky;
			top: 1em;
			margin-top: 2em;
			margin-left: 32px;
			@media(max-width: 840px) {
			 position: initial;
			 margin-left: 0;
		 }
			& :first-child {
				margin-top: 1.2rem;
			}
		}
		& .post-body {
			margin-top: 2em;
			margin-right: 32px;
			@media(max-width: 840px) {
				margin-right: 0;
			}
		}
		& .cover-img {
			grid-area: cover;
		}
	}
	&.post-wide { /* Posts with a wide main image, like movie screenshot posts */
		display: block;
		}
		& .post-body {
			margin: auto 32px;
			@media(max-width: 840px) {
				margin: auto 0;
			}
	}
	&.post-portrait { /* Posts with a portrait orientation main image such as photo posts */
		display: grid;
		grid-template-columns: minmax(320px, 720px) 32px minmax(320px, 1fr);
		grid-template-areas:
		"cover . caption";
		align-items: end;
		@media(max-width: 840px) {
			grid-template-columns: minmax(320px, 720px) 24px minmax(240px, 1fr);
			grid-template-areas:
			"cover . caption";
		}
		@media(max-width: 640px) {
			display: block;
		}
		& .cover-img {
			align-self: end;
		}
		& .post-body {
			margin: 0;
			grid-area: caption;
			align-self: end;
		}
	}
}
.portfolio {
	& .projects div {
		margin-top: var(--l);
		margin-bottom: var(--l);
		& a {
			text-decoration: none;
			& img {
				width: 100%;
				height: auto;
			}
			& p {
				margin-bottom: 0;
			}
		}
	}
}
.two-col {
	display: grid;
	grid-template-columns: repeat(auto-fill, minmax(420px, 1fr));
	grid-gap: var(--m);
}
.tre-col {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(min-content, 200px));
	grid-gap: var(--m);
}
/*----------------------------
	# Main navigation
----------------------------*/
nav {
	width: 100%;
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(80px, 80px));
	grid-auto-rows: 80px;
	grid-auto-flow: row;
	grid-gap: 16px;
	padding-left: 32px;
	font-size: var(--text);
	@media(max-width: 420px) {
		grid-template-columns: repeat(auto-fill, minmax(64px, 64px));
		grid-auto-rows: 64px;
		grid-gap: 8px;
				font-size: var(--text-s);
	}
	& a {
		text-decoration: none;
		color: var(--heading-color);

		display: flex;
		align-items: center;
		justify-content: center;
		height: 100%;
		width: 100%;
		&:hover {
			background-color: var(--brand-color);
			transform: scale(1.02);
		}
		&:active {
			transform: scale(1);
		}
		&.active {
			text-decoration: underline;
			text-decoration-thickness: 2px;
			text-decoration-offset: 2px;
			text-decoration-color: var(--brand-color);
		}
		&.home {
			& svg {
				fill: var(--brand-color);
				width: 40px;
				transition: var(--slow);
			}
			&:hover,
			&.active {
				background: var(--brand-color);
				& svg {
					fill: white;
				}
			}
		}
	}
}
footer {
	min-height: 200px;
	background-color: var(--brand-color);
	padding: 32px;
	margin-top: var(--xl);
	color: var(--text-color);
	display: flex;
	align-items: flex-end;
	& > * {
		width: 100%;
		max-width: 1280px;
		margin: 0 auto;
	}
}
/*----------------------------
	# Miscellaneous debris
----------------------------*/
.no-bullet {
	/* Removes bullets from lists and resets padding */
	padding-left: 0;
	list-style-type: none;

}
.link-left::before {
	/* Adds a left pointing arrow before a link,
		good for 'Back to →' type of links. */
	content: '\2190';
	display: inline-block;
	margin-right: var(--s);
	text-decoration: none;
}
.link-right::after {
	/* Adds a right pointing arrow after a link,
		good for 'Read more →' or 'See all →' type of links. */
	content: '\2192';
	display: inline-block;
	margin-left: var(--s);
	text-decoration: none;
}
pre {
	background-color: var(--light-gray-color);
	padding: var(--s) var(--l);
	border-radius: var(--xs);
	overflow: scroll;
}
.sticky {
	position: sticky;
	top: 1em;
	@media(max-width: 840px) {
		position: relative;
		top: initial;
	}
}
.hidden {
	height: 0px;
	width: 0px;
	visibility: hidden;
}

